# esp32-iot-wifi

./: .gitignore  CMakeLists.txt  nvs.csv  sdkconfig copy.old  sdkconfig.good
data/: index.html
main/: CMakeLists.txt  Kconfig.projbuild  globals.c  hashmap.c  httpd.c  interrupt.c  main.c  mqtt.c  nvs.c  sleep.c  utils.c  wifi.c
main/include/: globals.h  hashmap.h  httpd.h  interrupt.h  log.h  mqtt.h  nvs.h  sleep.h  utils.h  wifi.h
